--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "name.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node name.js",
-    "dev": "node --watch name.js"
-   },
-
+    "start": "node hobbies.js",
+    "dev": "node --watch hobbies.js"
+  },
   "author": "Francesco Cernuto",
   "license": "ISC",
+  "devDependencies": {},
   "description": ""
 }
